--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,12 @@ tokio = { version = "1.0", features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
 tracing = "0.1"
 tracing-subscriber = "0.2"
-headers="0.3.4"
+headers = "0.3.4"
 futures = "0.3"
 prost = "0.8"
 # Only necessary if using Protobuf well-known types:
 prost-types = "0.8"
+uuid = { version = "0.8", features = ["serde", "v4"] }
 
 [build-dependencies]
 prost-build = { version = "0.8.0" }
